5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1594_1804.log
== TEST (2019-03-28 08:24:38) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = float(input("Digite um valor para absissa de A: "))
yA = float(input("Digite um valor para ordenada de A: "))
xB = float(input("Digite um valor para absissa de B: "))
yB = float(input("Digite um valor para ordenada de B: "))

# Calculo da distancia de A para B:
dAB = round((xB - xA)**2 + (yB - yA)**2)**0.5
print(dAB) 

print(xM, yM)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(xM, yM)
NameError: name 'xM' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 08:25:59) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = float(input("Digite um valor para absissa de A: "))
yA = float(input("Digite um valor para ordenada de A: "))
xB = float(input("Digite um valor para absissa de B: "))
yB = float(input("Digite um valor para ordenada de B: "))

# Calculo da distancia de A para B:
dAB = round(((xB - xA)**2 + (yB - yA)**2)**0.5, 3)
print(dAB) 

-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 08:26:11) 
-- CODE:
# Leitura das coordenados dos pontos A e B:
xA = float(input("Digite um valor para absissa de A: "))
yA = float(input("Digite um valor para ordenada de A: "))
xB = float(input("Digite um valor para absissa de B: "))
yB = float(input("Digite um valor para ordenada de B: "))

# Calculo da distancia de A para B:
dAB = round(((xB - xA)**2 + (yB - yA)**2)**0.5, 3)
print(dAB) 

-- EXECUTION TIME:
0.166731
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
